# scalable-server

./: .gitignore  LibCMakeLists.txt  api_functions.h
client/: CMakeLists.txt  log.csv
client-controller/: CMakeLists.txt
client-controller/include/: connection.h  handle.h  state.h  util.h
client-controller/src/: connection.c  handle.c  main.c  state.c  util.c
client/include/: handle.h  log.h  run.h  state.h  thread.h  util.h
client/src/: handle.c  log.c  main.c  run.c  state.c  thread.c  util.c
core/: CMakeLists.txt  logs.csv
core/include/: objects.h  util.h
core/src/: main.c  util.c
one-to-one/: CMakeLists.txt
one-to-one/include/: objects.h  one_to_one.h  setup.h
one-to-one/src/: api_functions.c  one_to_one.c  setup.c  test_main.c
poll-server/: CMakeLists.txt
poll-server/include/: objects.h  poll_server.h
poll-server/src/: api_functions.c  poll_server.c  test_main.c
process-server/: CMakeLists.txt
process-server/include/: objects.h  process_server.h  setup.h  setup_teardown.h
process-server/src/: api_functions.c  process_server.c  setup.c  setup_teardown.c  test_main.c
